{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 284,
  "lineage": "21c83ee5-d8bb-0200-95c0-a4fab1d9c99f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0069aa073aac75299",
            "arn": "arn:aws:ec2:us-east-1:762233760360:instance/i-0c3fe053d30d3816b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3fe053d30d3816b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS-FINAL-PROJECT",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0540963874e9a74e6",
            "private_dns": "ip-10-10-10-206.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.206",
            "public_ip": "44.203.247.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07cc596d06cea69c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1541bf7a1bff03e",
            "tags": {
              "Name": "JumpServer-WordPress"
            },
            "tags_all": {
              "Name": "JumpServer-WordPress"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07161df172aaeac22"
            ]
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_security_group.db_sg",
            "aws_security_group.jump_sg",
            "aws_subnet.jump_public",
            "data.aws_ami.ubuntu"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "alb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:internet-gateway/igw-0bde892f5a2573f6d",
            "id": "igw-0bde892f5a2573f6d",
            "owner_id": "762233760360",
            "tags": {
              "Name": "AWS-FINAL-ALB-IGW"
            },
            "tags_all": {
              "Name": "AWS-FINAL-ALB-IGW"
            },
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "dependencies": [
            "aws_vpc.aws_final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "batch3_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762233760360:loadbalancer/app/BATCH3-ALB/de34d0045eca6bf7",
            "arn_suffix": "app/BATCH3-ALB/de34d0045eca6bf7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "BATCH3-ALB-1357306628.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:762233760360:loadbalancer/app/BATCH3-ALB/de34d0045eca6bf7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "BATCH3-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06764014a9b25ff56"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0135e489495aa0159"
              },
              {
                "subnet_id": "subnet-081d68f25c24ef0b1"
              },
              {
                "subnet_id": "subnet-0bc4d20a1861cbb66"
              }
            ],
            "subnets": [
              "subnet-0135e489495aa0159",
              "subnet-081d68f25c24ef0b1",
              "subnet-0bc4d20a1861cbb66"
            ],
            "tags": {
              "Name": "BATCH3-ALB"
            },
            "tags_all": {
              "Name": "BATCH3-ALB"
            },
            "vpc_id": "vpc-0b95e81c73cb5e1d5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.alb_public",
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "batch3_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762233760360:listener/app/BATCH3-ALB/de34d0045eca6bf7/04759f8cd59c6e68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:762233760360:targetgroup/BATCH3-ALB-TG/b8312a9cea23810d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:762233760360:listener/app/BATCH3-ALB/de34d0045eca6bf7/04759f8cd59c6e68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:762233760360:loadbalancer/app/BATCH3-ALB/de34d0045eca6bf7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.batch3_alb",
            "aws_lb_target_group.batch3_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.alb_public",
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "batch3_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762233760360:targetgroup/BATCH3-ALB-TG/b8312a9cea23810d",
            "arn_suffix": "targetgroup/BATCH3-ALB-TG/b8312a9cea23810d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-400",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:762233760360:targetgroup/BATCH3-ALB-TG/b8312a9cea23810d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:762233760360:loadbalancer/app/BATCH3-ALB/de34d0045eca6bf7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "BATCH3-ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "BATCH3-ALB-TG"
            },
            "tags_all": {
              "Name": "BATCH3-ALB-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "dependencies": [
            "aws_vpc.aws_final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alb_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:route-table/rtb-067598f9f0b46394f",
            "id": "rtb-067598f9f0b46394f",
            "owner_id": "762233760360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bde892f5a2573f6d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ALB-SERVER-RT"
            },
            "tags_all": {
              "Name": "ALB-SERVER-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.alb_igw",
            "aws_vpc.aws_final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:route-table/rtb-0cdce38610ef93b50",
            "id": "rtb-0cdce38610ef93b50",
            "owner_id": "762233760360",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "APP-SERVER-RT"
            },
            "tags_all": {
              "Name": "APP-SERVER-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:route-table/rtb-0d3fbc63a70d6cb5e",
            "id": "rtb-0d3fbc63a70d6cb5e",
            "owner_id": "762233760360",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "DB-SERVER-RT"
            },
            "tags_all": {
              "Name": "DB-SERVER-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jump_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:route-table/rtb-04469a7fd4c41aba1",
            "id": "rtb-04469a7fd4c41aba1",
            "owner_id": "762233760360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bde892f5a2573f6d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JUMP-SERVER-RT"
            },
            "tags_all": {
              "Name": "JUMP-SERVER-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.alb_igw",
            "aws_vpc.aws_final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alb_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068551ad374609cd8",
            "route_table_id": "rtb-067598f9f0b46394f",
            "subnet_id": "subnet-0135e489495aa0159"
          },
          "dependencies": [
            "aws_internet_gateway.alb_igw",
            "aws_route_table.alb_server_rt",
            "aws_subnet.alb_public",
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002867fb8da3f8485",
            "route_table_id": "rtb-067598f9f0b46394f",
            "subnet_id": "subnet-081d68f25c24ef0b1"
          },
          "dependencies": [
            "aws_internet_gateway.alb_igw",
            "aws_route_table.alb_server_rt",
            "aws_subnet.alb_public",
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0780f1a841d4c0b75",
            "route_table_id": "rtb-067598f9f0b46394f",
            "subnet_id": "subnet-0bc4d20a1861cbb66"
          },
          "dependencies": [
            "aws_internet_gateway.alb_igw",
            "aws_route_table.alb_server_rt",
            "aws_subnet.alb_public",
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9c4b69acb5d2e16",
            "route_table_id": "rtb-0cdce38610ef93b50",
            "subnet_id": "subnet-0910bd1796f61d135"
          },
          "dependencies": [
            "aws_route_table.app_server_rt",
            "aws_subnet.app_private",
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4ffefe14ba66568",
            "route_table_id": "rtb-0cdce38610ef93b50",
            "subnet_id": "subnet-009788e012bbe3f08"
          },
          "dependencies": [
            "aws_route_table.app_server_rt",
            "aws_subnet.app_private",
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04535f87378167c1d",
            "route_table_id": "rtb-0cdce38610ef93b50",
            "subnet_id": "subnet-0adb30be1237d31e4"
          },
          "dependencies": [
            "aws_route_table.app_server_rt",
            "aws_subnet.app_private",
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e5a94394d27cd4f",
            "route_table_id": "rtb-0d3fbc63a70d6cb5e",
            "subnet_id": "subnet-0e9ad92fde0e668e3"
          },
          "dependencies": [
            "aws_route_table.db_server_rt",
            "aws_subnet.db_private",
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c678a37ed3f4028",
            "route_table_id": "rtb-0d3fbc63a70d6cb5e",
            "subnet_id": "subnet-059900ccdb6a9ccaf"
          },
          "dependencies": [
            "aws_route_table.db_server_rt",
            "aws_subnet.db_private",
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09382e112e03f6b79",
            "route_table_id": "rtb-0d3fbc63a70d6cb5e",
            "subnet_id": "subnet-0fe85ad146f9e0ffa"
          },
          "dependencies": [
            "aws_route_table.db_server_rt",
            "aws_subnet.db_private",
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jump_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0552730c60b1d963a",
            "route_table_id": "rtb-04469a7fd4c41aba1",
            "subnet_id": "subnet-0e1541bf7a1bff03e"
          },
          "dependencies": [
            "aws_internet_gateway.alb_igw",
            "aws_route_table.jump_server_rt",
            "aws_subnet.jump_public",
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:security-group/sg-06764014a9b25ff56",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06764014a9b25ff56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AWS-FINAL-ALB-SG",
            "name_prefix": "",
            "owner_id": "762233760360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS-FINAL-ALB-SG"
            },
            "tags_all": {
              "Name": "AWS-FINAL-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:security-group/sg-0cddd1c455079dc74",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cddd1c455079dc74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AWS-FINAL-APP-SG",
            "name_prefix": "",
            "owner_id": "762233760360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS-FINAL-APP-SG"
            },
            "tags_all": {
              "Name": "AWS-FINAL-APP-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:security-group/sg-0e1feba27fd41b92e",
            "description": "Allow MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1feba27fd41b92e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "AWS-FINAL-DB-SG",
            "name_prefix": "",
            "owner_id": "762233760360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS-FINAL-DB-SG"
            },
            "tags_all": {
              "Name": "AWS-FINAL-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:security-group/sg-07161df172aaeac22",
            "description": "Allow SSH \u0026 HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07161df172aaeac22",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AWS-FINAL-JUMP-SG",
            "name_prefix": "",
            "owner_id": "762233760360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS-FINAL-JUMP-SG"
            },
            "tags_all": {
              "Name": "AWS-FINAL-JUMP-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-0135e489495aa0159",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.10.128/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0135e489495aa0159",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-FINAL-ALB-PUBLIC-1"
            },
            "tags_all": {
              "Name": "AWS-FINAL-ALB-PUBLIC-1"
            },
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "dependencies": [
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-081d68f25c24ef0b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.144/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081d68f25c24ef0b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-FINAL-ALB-PUBLIC-2"
            },
            "tags_all": {
              "Name": "AWS-FINAL-ALB-PUBLIC-2"
            },
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "dependencies": [
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-0bc4d20a1861cbb66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.160/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc4d20a1861cbb66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-FINAL-ALB-PUBLIC-3"
            },
            "tags_all": {
              "Name": "AWS-FINAL-ALB-PUBLIC-3"
            },
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "dependencies": [
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-0910bd1796f61d135",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.10.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0910bd1796f61d135",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-FINAL-APP-PRIVATE-1"
            },
            "tags_all": {
              "Name": "AWS-FINAL-APP-PRIVATE-1"
            },
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "dependencies": [
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-009788e012bbe3f08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009788e012bbe3f08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-FINAL-APP-PRIVATE-2"
            },
            "tags_all": {
              "Name": "AWS-FINAL-APP-PRIVATE-2"
            },
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "dependencies": [
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-0adb30be1237d31e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.96/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adb30be1237d31e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-FINAL-APP-PRIVATE-3"
            },
            "tags_all": {
              "Name": "AWS-FINAL-APP-PRIVATE-3"
            },
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "dependencies": [
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-0e9ad92fde0e668e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.10.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9ad92fde0e668e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-FINAL-DB-PRIVATE-1"
            },
            "tags_all": {
              "Name": "AWS-FINAL-DB-PRIVATE-1"
            },
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "dependencies": [
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-059900ccdb6a9ccaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059900ccdb6a9ccaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-FINAL-DB-PRIVATE-2"
            },
            "tags_all": {
              "Name": "AWS-FINAL-DB-PRIVATE-2"
            },
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "dependencies": [
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-0fe85ad146f9e0ffa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe85ad146f9e0ffa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-FINAL-DB-PRIVATE-3"
            },
            "tags_all": {
              "Name": "AWS-FINAL-DB-PRIVATE-3"
            },
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "dependencies": [
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jump_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-0e1541bf7a1bff03e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.10.192/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1541bf7a1bff03e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-FINAL-JUMP-PUBLIC"
            },
            "tags_all": {
              "Name": "AWS-FINAL-JUMP-PUBLIC"
            },
            "vpc_id": "vpc-0b95e81c73cb5e1d5"
          },
          "dependencies": [
            "aws_vpc.aws_final_project",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_final_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:vpc/vpc-0b95e81c73cb5e1d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.10.0/24",
            "default_network_acl_id": "acl-0f90a4aca2029c6ab",
            "default_route_table_id": "rtb-0629a8f16c546f967",
            "default_security_group_id": "sg-0b6c72d3ff5610c77",
            "dhcp_options_id": "dopt-05cbe90aed7798e72",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b95e81c73cb5e1d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0629a8f16c546f967",
            "owner_id": "762233760360",
            "tags": {
              "Name": "AWS-FINAL-PROJECT"
            },
            "tags_all": {
              "Name": "AWS-FINAL-PROJECT"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}